# advent-of-code

./: pyproject.toml
helpers/: io.py
problems/2022/day-1/: README.md  solution.py
problems/2022/day-2/: README.md  solution.py
problems/2022/day-3/: solution.py
problems/2022/day-4/: solution.py
problems/2022/day-5/: README.md  solution.py
problems/2022/day-6/: README.md  solution.py
problems/2022/day-6/data/: test.txt
template/day-n/: solution.py
