[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Colt Chapin <colton.chapin@gmail.com>"]
packages = [{include = "helpers"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
